welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:6: error: not found: value dtae
  if (you <= 2 || dtae <= 2) {
                  ^