welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
	if (you >= 8 || date >= 8) {
    return  2
  }
  
  if (you <= 2 || dtae <= 2) {
    return 0
  }
  
  return 1
}